content/docs/0.16.1/reference/cli/commands/keptn_trigger_evaluation.md
---
date: "2022-07-11T09:18:58+02:00"
title: "keptn trigger evaluation"
slug: keptn_trigger_evaluation
---
## keptn trigger evaluation

Triggers the evaluation of a test for a service in a project and stage

### Synopsis

Triggers the evaluation of a test for a service in a project and stage 

* This command takes the project (--project), stage (--stage), and the service (--service), which should be evaluated. 
* It is necessary to specify a time frame (--timeframe) of the evaluation. If, for example, the 
flag is set to --timeframe=5m, the evaluation is conducted for the last 5 minutes. 
* To specify a particular starting point, the --start flag can be used. In this case, the specified time frame is added to the starting point.
* To use a certain state of the git repository, please specify --git-commit-id with the appropiate commit ID


```
keptn trigger evaluation [flags]
```

### Examples

```
keptn trigger evaluation --project=sockshop --stage=hardening --service=carts --timeframe=5m --start=2019-10-31T11:59:59 --git-commit-id=<git-commit-id>
keptn trigger evaluation --project=sockshop --stage=hardening --service=carts --start=2019-10-31T11:59:59 --end=2019-10-31T12:04:59 --labels=test-id=1234,test-name=performance-test [--git-commit-id=<git-commit-id>]

```

### Options

```
      --end string              The end point to which the evaluation data should be gathered in UTC (can not be used together with --timeframe)
      --git-commit-id string    The used commit ID context
  -l, --labels stringToString   Additional labels to be provided to the lighthouse service (default [])
  -o, --output string           Output format for the --watch flag. One of: json|yaml
      --project string          The project containing the service to be evaluated
      --service string          The service to be evaluated
      --stage string            The stage containing the service to be evaluated
      --start string            The starting point from which to start the evaluation in UTC
      --timeframe string        The time frame from which the evaluation data should be gathered (can not be used together with --end)
  -w, --watch                   Print event stream
      --watch-time int          Timeout (in seconds) used for the --watch flag (default 2147483647)
```

### Options inherited from parent commands

```
      --config-file string   Specify custom Keptn Config file path (default: ~/.keptn/config)
  -h, --help                 help
      --mock                 Disables communication to a Keptn endpoint
  -n, --namespace string     Specify the namespace where Keptn should be installed, used and uninstalled in (default "keptn")
  -q, --quiet                Suppresses debug and info messages
  -v, --verbose              Enables verbose logging to print debug messages
  -y, --yes                  Assume yes for all user prompts
```

### SEE ALSO

* [keptn trigger](../keptn_trigger/)	 - Triggers the execution of an action in keptn

###### Auto generated by spf13/cobra on 11-Jul-2022
